Added more functions and bun lockfile
